--- a/templates/index.html
+++ b/templates/index.html
@@ -26,7 +26,7 @@ Inicio
 
     <div class="col-md-4 mx-auto">
         <div class="card card-body text-center">
-          <p>No se hay contactos registrados!</p>
+          <p>No hay contactos registrados!</p>
           <a href="/agregar">Agregar</a>
         </div>
       </div>
