--- a/templates/layout.html
+++ b/templates/layout.html
@@ -48,7 +48,7 @@
 
                 {% if loged %}
                     <li class="nav-item">
-                  <a class="nav-link" href="/agregar">Crear Contacto</a>
+                  <a class="nav-link" href="/crearcontacto">Crear Contacto</a>
                 </li>
                 <li class="nav-item">
                   <a class="nav-link" href="/logout">Logout</a>
